src/test/ui/compile-fail-migration/associated-types-path-2.stderr
error[E0308]: mismatched types
  --> $DIR/associated-types-path-2.rs:29:14
   |
LL |     f1(2i32, 4i32);
   |              ^^^^ expected u32, found i32

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:39:5
   |
LL |     f1(2u32, 4u32);
   |     ^^ the trait `Foo` is not implemented for `u32`
   |
note: required by `f1`
  --> $DIR/associated-types-path-2.rs:23:1
   |
LL | pub fn f1<T: Foo>(a: T, x: T::A) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:39:5
   |
LL |     f1(2u32, 4u32);
   |     ^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `u32`

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:45:5
   |
LL |     f1(2u32, 4i32);
   |     ^^ the trait `Foo` is not implemented for `u32`
   |
note: required by `f1`
  --> $DIR/associated-types-path-2.rs:23:1
   |
LL | pub fn f1<T: Foo>(a: T, x: T::A) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `u32: Foo` is not satisfied
  --> $DIR/associated-types-path-2.rs:45:5
   |
LL |     f1(2u32, 4i32);
   |     ^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/associated-types-path-2.rs:51:18
   |
LL |     let _: i32 = f2(2i32);
   |                  ^^^^^^^^ expected i32, found u32

error: aborting due to 6 previous errors

Some errors occurred: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
